force-app/main/default/objects/Service_Log__c/Service_Log__c.object-meta.xml
<CustomObject>
    <label>Service Log</label>
    <nameField>
        <displayFormat>SL-{00000}</displayFormat>
        <label>Service Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Logs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>