force-app/main/default/objects/Service_Log__c/fields/Action__c.field-meta.xml
<CustomField>
    <fullName>Action__c</fullName>
    <label>Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Created</fullName>
            </value>
            <value>
                <fullName>Assigned</fullName>
            </value>
            <value>
                <fullName>Status Changed</fullName>
            </value>
            <value>
                <fullName>Customer Contacted</fullName>
            </value>
            <value>
                <fullName>Investigation</fullName>
            </value>
            <value>
                <fullName>Escalated</fullName>
            </value>
            <value>
                <fullName>Resolved</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Comment Added</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>