force-app/main/default/objects/Service_Log__c/fields/Action_Date__c.field-meta.xml
<CustomField>
    <fullName>Action_Date__c</fullName>
    <description>Date and time when the service log action occurred.</description>
    <inlineHelpText>Records when this action was performed on the service request.</inlineHelpText>
    <label>Action Date</label>
    <type>DateTime</type>
</CustomField>