force-app/main/default/objects/Service_Log__c/fields/Details__c.field-meta.xml
<CustomField>
    <fullName>Details__c</fullName>
    <description>Additional details about the action performed on the service request.</description>
    <inlineHelpText>Enter relevant information about this service log entry.</inlineHelpText>
    <label>Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>