force-app/main/default/objects/Service_Log__c/fields/Performed_By__c.field-meta.xml
<CustomField>
    <fullName>Performed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Salesforce user who performed the service log action.</description>
    <inlineHelpText>Select the Salesforce user who performed this action.</inlineHelpText>
    <label>Performed By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Service_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>