force-app/main/default/objects/Service_Log__c/fields/Service_Request__c.field-meta.xml
<CustomField>
    <fullName>Service_Request__c</fullName>
    <description>Service Request associated with this service log.</description>
    <inlineHelpText>Select the service request for which this action was performed.</inlineHelpText>
    <label>Service Request</label>
    <referenceTo>Service_Request__c</referenceTo>
    <relationshipLabel>Service Logs</relationshipLabel>
    <relationshipName>Service_Logs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>